[gd_scene load_steps=11 format=3 uid="uid://dfhdd588sko2w"]

[ext_resource type="Script" path="res://scenes/weapons/bullets/Standard_Bullet.gd" id="1_qatq7"]
[ext_resource type="AudioStream" uid="uid://bct4sn7lqvkbk" path="res://assets/audio/pistol_shoot.wav" id="2_483ya"]
[ext_resource type="Texture2D" uid="uid://domau676dwvyx" path="res://assets/sprites/Bullet.png" id="2_cs5lu"]
[ext_resource type="Texture2D" uid="uid://rxrgbsr1cqik" path="res://assets/sprites/particle.png" id="3_afw0q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j6837"]
size = Vector2(16, 4)

[sub_resource type="Gradient" id="Gradient_ax6l3"]
offsets = PackedFloat32Array(0, 0.590708)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wvmh7"]
gradient = SubResource("Gradient_ax6l3")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_7xol7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_f7ktx"]
curve = SubResource("Curve_7xol7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bi80h"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 13.19
spread = 0.0
initial_velocity_max = 55.56
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.5
alpha_curve = SubResource("CurveTexture_f7ktx")

[node name="StandardBullet" type="Area2D"]
script = ExtResource("1_qatq7")
color = Color(1, 0.45098, 0, 1)
collision_sound = ExtResource("2_483ya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j6837")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cs5lu")

[node name="LifespanTimer" type="Timer" parent="."]
one_shot = true

[node name="Glow" type="PointLight2D" parent="."]
position = Vector2(-10, 0)
shadow_enabled = true
texture = SubResource("GradientTexture2D_wvmh7")

[node name="Particles" type="GPUParticles2D" parent="."]
position = Vector2(-5, 0)
amount = 16
process_material = SubResource("ParticleProcessMaterial_bi80h")
texture = ExtResource("3_afw0q")

[node name="NormalGetter" type="RayCast2D" parent="."]
position = Vector2(-16, 0)
target_position = Vector2(24, 0)
hit_from_inside = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifespanTimer" to="." method="_on_lifespan_timer_timeout"]
